welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:-6: error: Missing closing brace `}' assumed here
try {
^redTicket:1: error: expected class or object definition
def redTicket(a:Int, b:Int, c:Int):Int = {
^